@@ -1,3 +1,7 @@
+[B]v12.0.0 (13.06.2013)[/B]
+- Fix:    RTMP url and parameters of concerts changed
+- Change: Version changed to 12 for Frodo and 11 for Eden
+
 [B]v2.3.0 (15.02.2013)[/B]
 - Update: Parameter handling changed.
 
